Fixes text getting cut off on smaller screen by replacing main height property with margins

--- a/assets/stylesheets/modules/_footer.scss
+++ b/assets/stylesheets/modules/_footer.scss
@@ -38,10 +38,10 @@
 
     .footer__detail {
       margin: 0 20px;
-      font-size: 1.2rem;
+      font-size: 1.1rem;
 
       @include breakpoints.small-desktop {
-        font-size: 1rem;
+        font-size: 0.9rem;
       }
 
       @include breakpoints.tablet {
