--- a/assets/stylesheets/modules/_projects.scss
+++ b/assets/stylesheets/modules/_projects.scss
@@ -4,23 +4,6 @@
 .projects {
   @include shared-styles.main-styles;
   flex-direction: column;
-  margin: 420px 0;
-
-  @include breakpoints.medium-desktop {
-    margin: 500px 0 520px;
-  }
-
-  @include breakpoints.small-desktop {
-    margin: 1160px 0 1180px;
-  }
-
-  @include breakpoints.tablet {
-    margin: 1120px 0 1240px;
-  }
-
-  @include breakpoints.phone {
-    margin: 180px 0 200px;
-  }
 
   .projects__heading {
     @include shared-styles.heading-styles(24px);
@@ -43,8 +26,11 @@
       margin: 0 40px 24px;
 
       @include breakpoints.medium-desktop {
-        margin-left: 0;
-        margin-right: 0;
+        margin: 0 0 24px;
+      }
+
+      @include breakpoints.tablet {
+        margin: 0;
       }
 
       .project__heading {
